--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": " ",
+    "name": "goFinances",
     "slug": "goFinances",
     "version": "1.0.0",
     "assetBundlePatterns": [
