login with google incomplete

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@react-navigation/native": "^6.0.13",
     "date-fns": "^2.29.3",
     "expo": "~46.0.13",
+    "expo-auth-session": "~3.7.4",
     "expo-font": "~10.2.0",
+    "expo-random": "~12.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.7",
