--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.14",
     "date-fns": "^2.29.3",
     "expo": "~46.0.13",
     "expo-auth-session": "~3.7.4",
